<resources>
    <string name="app_name">Coronavirus Emergency </string>
    <string name="app_name_title">Coronavirus Emergency App \n<b>Protect Your Self</b></string>
    <string name="text_information_coronavirus">Information of Coronavirus \nQuestions &amp; Answers</string>
    <string name="text_how_to_protect_your">How to Protect Yourself?</string>
    <string name="text_infection_world_map_dashboard">World Infection Map  Dashboard \n Novel Coronavirus 2019-nCov</string>
    <string name="text_infection_world_map_situation">World Infection Map  Situation \n Novel Coronavirus COVID-19 </string>
    <string name="text_health_map">Health Map \n Novel Coronavirus (COVID-19) </string>
    <string name="developer_copyright">Copyright \u00a9 2020, All rights reserved.</string>
    <string name="developer_made">Made With ❤ in India</string>
    <string name="text_share_us">Share Us</string>
    <string name="text_about_us">About Us</string>
    <string name="text_what_is_coronavirus">What is coronavirus?</string>
    <string name="text_what_is_coronavirus_answer">Coronaviruses are a large family of viruses which may cause illness in animals or humans.  In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19.</string>
    <string name="text_what_is_covid19">What is covid-19?</string>
    <string name="text_what_is_covid19_answer">COVID-19 is the infectious disease caused by the most recently discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</string>
    <string name="text_symtom_covid19">What are the symptoms of COVID-19?</string>
    <string name="text_symtom_covid19_answer">The most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become infected but don’t develop any symptoms and don\'t feel unwell. Most people (about 80%) recover from the disease without needing special treatment. Around 1 out of every 6 people who gets COVID-19 becomes seriously ill and develops difficulty breathing. Older people, and those with underlying medical problems like high blood pressure, heart problems or diabetes, are more likely to develop serious illness. About 2% of people with the disease have died. People with fever, cough and difficulty breathing should seek medical attention.</string>
    <string name="text_covid19_spread">How does COVID-19 spread?</string>
    <string name="text_covid19_spread_answer">"People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick. \n\n WHO is assessing ongoing research on the ways COVID-19 is spread and will continue to share updated findings.
        \n\nCan the virus that causes COVID-19 be transmitted through the air?
        \nStudies to date suggest that the virus that causes COVID-19 is mainly transmitted through contact with respiratory droplets rather than through the air.  See previous answer on “How does COVID-19 spread?”
        \n\nCan CoVID-19 be caught from a person who has no symptoms?
        \nThe main way the disease spreads is through respiratory droplets expelled by someone who is coughing. The risk of catching COVID-19 from someone with no symptoms at all is very low. However, many people with COVID-19 experience only mild symptoms. This is particularly true at the early stages of the disease. It is therefore possible to catch COVID-19 from someone who has, for example, just a mild cough and does not feel ill.  WHO is assessing ongoing research on the period of transmission of COVID-19 and will continue to share updated findings.
        \n\nCan I catch COVID-19 from the feces of someone with the disease?
        \nThe risk of catching COVID-19 from the feces of an infected person appears to be low. While initial investigations suggest the virus may be present in feces in some cases, spread through this route is not a main feature of the outbreak. WHO is assessing ongoing research on the ways COVID-19 is spread and will continue to share new findings. Because this is a risk, however, it is another reason to clean hands regularly, after using the bathroom and before eating. "</string>
    <string name="text_covid19_catch">How likely am I to catch COVID-19?</string>
    <string name="text_covid19_catch_answer">The risk depends on where you  are - and more specifically, whether there is a COVID-19 outbreak unfolding there.
        \n\nFor most people in most locations the risk of catching COVID-19 is still low. However, there are now places around the world (cities or areas) where the disease is spreading. For people living in, or visiting, these areas the risk of catching COVID-19 is higher. Governments and health authorities are taking vigorous action every time a new case of COVID-19 is identified. Be sure to comply with any local restrictions on travel, movement or large gatherings. Cooperating with disease control efforts will reduce your risk of catching or spreading COVID-19.  COVID-19 outbreaks can be contained and transmission stopped, as has been shown in China and some other countries. Unfortunately, new outbreaks can emerge rapidly. It’s important to be aware of the situation where you are or intend to go. WHO publishes daily updates on the COVID-19 situation worldwide. \nYou can see these at - <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports/</a></string>
    <string name="text_covid19_worry">Should I worry about COVID-19?</string>
    <string name="text_how_to_protect_your_self_prevent">What can I do to protect myself and prevent the spread of disease?</string>
    <string name="text_how_to_protect_your_self_prevent_answer_1"><b>Protection measures for everyone</b>
            \n\nStay aware of the latest information on the COVID-19 outbreak, available on the WHO website and through your national and local public health authority. Many countries around the world have seen cases of COVID-19 and several have seen outbreaks. Authorities in China and some other countries have succeeded in slowing or stopping their outbreaks. However, the situation is unpredictable so check regularly for the latest news.
</string>
    <string name="text_how_to_protect_your_self_prevent_answer_2">"
        \n\nYou can reduce your chances of being infected or spreading COVID-19 by taking some simple precautions:
        \n\n1. Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water. Why? Washing your hands with soap and water or using alcohol-based hand rub kills viruses that may be on your hands.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_3">
        \n\n2. Maintain at least 1 metre (3 feet) distance between yourself and anyone who is coughing or sneezing. Why? When someone coughs or sneezes they spray small liquid droplets from their nose or mouth which may contain virus. If you are too close, you can breathe in the droplets, including the COVID-19 virus if the person coughing has the disease.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_4">
        \n\n3. Avoid touching eyes, nose and mouth. Why? Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and can make you sick.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_5">
        \n\n4. Make sure you, and the people around you, follow good respiratory hygiene. This means covering your mouth and nose with your bent elbow or tissue when you cough or sneeze. Then dispose of the used tissue immediately. Why? Droplets spread virus. By following good respiratory hygiene you protect the people around you from viruses such as cold, flu and COVID-19.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_6">
        \n\n5. Stay home if you feel unwell. If you have a fever, cough and difficulty breathing, seek medical attention and call in advance. Follow the directions of your local health authority. Why? National and local authorities will have the most up to date information on the situation in your area. Calling in advance will allow your health care provider to quickly direct you to the right health facility. This will also protect you and help prevent spread of viruses and other infections.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_7">
        \n\n6. Stay informed on the latest developments about COVID-19. Follow advice given by your healthcare provider, your national and local public health authority or your employer on how to protect yourself and others from COVID-19. Why? National and local authorities will have the most up to date information on whether COVID-19 is spreading in your area. They are best placed to advise on what people in your area should be doing to protect themselves.
    </string>
    <string name="text_how_to_protect_your_self_prevent_answer_8">
        \n\n7. Keep up to date on the latest COVID-19 hotspots (cities or local areas where COVID-19 is spreading widely). If possible, avoid traveling to places  – especially if you are an older person or have diabetes, heart or lung disease.                  Why? You have a higher chance of catching COVID-19 in one of these areas.  "</string>
    <string name="text_disclaimer">Disclaimer</string>
    <string name="text_data_disclaimer">Lionheart Apps (OPC) Pvt. Ltd. has developed this android application to enhance the national awareness amongst our citizens related to the coronavirus precautions and safety measures enlisted by the World Health Organisation [WHO] and other medical experts all over the globe.
                                     \n\n It\'s our small effort to spread this information via our android application platform to spread awareness among our users as quickly as possible.
                                    \n\nPlease make sure this information is only provided on a reference basis from multiple websites, our company accept no liabilities in this regards.
                                         \n\nInformation references/resources-
                                        \n1) <a href="https://www.who.int/news-room/q-a-detail/q-a-coronaviruses">World Health Organisation [WHO] </a>
                                        \n2) <a href="https://www.healthmap.org/covid-19/">HealthMap</a></string>
    <string name="text_stay_healthy">Stay \n <b>Healthy </b></string>
</resources>